syntax = "proto3";

package double_echo_broadcast;

service DoubleEchoBroadcast {
    rpc EchoWrite (EchoWriteRequest) returns (EchoWriteResponse) {}
}

message EchoWriteRequest {
   bytes write = 1;
   bytes info = 2;
}

message EchoWriteResponse {
    bytes nonce = 1;
    bytes ok = 2;
}