syntax = "proto3";

package location_master;

service LocationMaster {
    rpc ObtainLocationReport (ObtainLocationReportRequest) returns (ObtainLocationReportResponse) {}
    rpc ObtainUsersAtLocation (ObtainUsersAtLocationRequest) returns (ObtainUsersAtLocationResponse) {}
}

message ObtainLocationReportRequest {
    uint32 idx = 1;
    uint32 epoch = 2;
}

message ObtainLocationReportResponse {
    uint32 pos_x = 1;
    uint32 pos_y = 2;
}

message ObtainUsersAtLocationRequest {
    uint32 pos_x = 1;
    uint32 pos_y = 2;
    uint32 epoch = 3;
}

message ObtainUsersAtLocationResponse {
    repeated uint32 idxs = 1;
}