
syntax = "proto3";

package location_proof;

service LocationProof {
    rpc RequestLocationProof (RequestLocationProofRequest) returns (RequestLocationProofResponse) {}
}

message Proof {
    uint32 idx_req = 1;
    uint32 loc_x = 2;
    uint32 loc_y = 3;
    uint32 epoch = 4;
    uint32 idx_ass = 5;
}

message RequestLocationProofRequest {
    uint32 idx = 1;
    uint32 epoch = 2;
}

message RequestLocationProofResponse {
    Proof proof = 1;
}
