syntax = "proto3";

package location_storage;

service LocationStorage {
    rpc SubmitLocationReport (SubmitLocationReportRequest) returns (SubmitLocationReportResponse) {}
    rpc ObtainLocationReport (ObtainLocationReportRequest) returns (ObtainLocationReportResponse) {}
    rpc RequestMyProofs      (RequestMyProofsRequest)      returns (RequestMyProofsResponse)      {}
}

message SubmitLocationReportRequest { //report is encrypted with idx
    bytes report = 1;
    bytes report_info = 2;
}

message SubmitLocationReportResponse {
    bytes nonce = 1;
    bytes ok = 2;
}

message ObtainLocationReportRequest {
    bytes user = 1;
    bytes user_info = 2;
}

message ObtainLocationReportResponse {
    bytes nonce = 1;
    bytes location = 2;
}

message RequestMyProofsRequest {
    bytes epochs = 1;
    bytes user_info = 2;
}

message RequestMyProofsResponse {
    bytes nonce = 1;
    bytes proofs = 2;
}