
pub mod location_storage {
    tonic::include_proto!("location_storage");
}
pub mod location_proof {
    tonic::include_proto!("location_proof");
}
pub mod location_master {
    tonic::include_proto!("location_master");
}
pub mod echo_broadcast {
    tonic::include_proto!("double_echo_broadcast");
}